Day 59 Take 2: grammar

--- a/_posts/2018-07-17-day-59.md
+++ b/_posts/2018-07-17-day-59.md
@@ -9,9 +9,9 @@ description: Time for a Pause
 
 I just discovered the low-end box that I used to automatically download my timeline has run out-of-memory, and all download tasks in the last 24+ hour have failed. This is an opportunity for me to hit the pause button.
 
-This project started to help me keep track of interesting tweets that I might want to go back to later. To some extent it has served that purpose well. However, even with automatic clustering and sorting, the amount of tweets that I had to read was still consuming more time than I'd like. And I'd been struggling to find an easy and robust way to present the tweets in the web pages. All in all, I need to take some time off to find out a better approach to this project. The potential solutions include:
+This project started to help me keep track of interesting tweets that I might want to go back to later. To some extent, it has served that purpose well. However, even with automatic clustering and sorting, reading the tweets was still consuming more time than I'd like. And I'd been struggling to find an easy and robust way to present the tweets in the web pages. All in all, I need to take some time off to find out a better approach to this project. The potential solutions include:
 
-1. Use a whitelist of twitter users in additional to universal encoding and clustering to further reduce the number of tweets to read.
+1. Use a whitelist of Twitter users in addition to universal encoding and clustering to further reduce the number of tweets to read.
 2. Develop a better UI and workflow for the tweet reading-marking-categorizing process.
 3. Explore other ways of presenting collected tweets other than grouping by date of appearance on my timeline.
 4. Reduce the scope. Maybe it's better and easier to focus on one of the following topics: research, tutorial, ideas/thoughts, or visualizations.
