Day 59: Apparantly I can't count....

--- a/_posts/2018-07-17-day-59.md
+++ b/_posts/2018-07-17-day-59.md
@@ -16,7 +16,7 @@ This project started to help me keep track of interesting tweets that I might wa
 3. Explore other ways of presenting collected tweets other than grouping by date of appearance on my timeline.
 4. Reduce the scope. Maybe it's better and easier to focus on one of the following topics: research, tutorial, ideas/thoughts, or visualizations.
 
-Anyway, I still collected four tweets from my timeline and put them in the following section. Maybe they'll be the last on this site, or maybe not. We'll see. :)
+Anyway, I still collected five tweets from my timeline and put them in the following section. Maybe they'll be the last on this site, or maybe not. We'll see. :)
 
 ## Miscellaneous
 <amp-twitter width="400" height="400"
