Remove dangling sub-header

--- a/_posts/2018-05-21-day-2.md
+++ b/_posts/2018-05-21-day-2.md
@@ -15,7 +15,7 @@ Some changes to the site:
 
 Today we have many GAN and reinforcement learning-related tweets. Personally I'm most impressed by @WSJGraphics's NLP piece for its neat visualization.
 
-### Add AI generated sound to AI generated paintings
+## Add AI generated sound to AI generated paintings
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998710870841544704">
