--- a/_posts/2018-06-14-day-26.md
+++ b/_posts/2018-06-14-day-26.md
@@ -153,7 +153,7 @@ description: Neural Scene Representation and Rendering
     <blockquote placeholder><p lang="en" dir="ltr">🤝 welcome to <a href="https://twitter.com/drsimonj?ref_src=twsrc%5Etfw">@drsimonj</a> inc. – your first assignment:<br>&quot;Creating corporate colour palettes for ggplot2&quot; <a href="https://t.co/e0GkYu6Yta">https://t.co/e0GkYu6Yta</a> <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://twitter.com/hashtag/dataviz?src=hash&amp;ref_src=twsrc%5Etfw">#dataviz</a> <a href="https://twitter.com/hashtag/ggplot2?src=hash&amp;ref_src=twsrc%5Etfw">#ggplot2</a> <a href="https://t.co/5Y6f1bDTDY">pic.twitter.com/5Y6f1bDTDY</a></p>&mdash; Mara Averick (@dataandme) <a href="https://twitter.com/dataandme/status/1007444842929180672?ref_src=twsrc%5Etfw">June 15, 2018</a></blockquote>
 </amp-twitter>
 
-## Micellaneous
+## Miscellaneous
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="1007330003011264512">
