--- a/_posts/2018-06-18-day-30.md
+++ b/_posts/2018-06-18-day-30.md
@@ -182,7 +182,7 @@ description: Tap of Occasional Insight
     <blockquote placeholder><p lang="en" dir="ltr">ICYMI, 👍 overview:<br>&quot;Enterprise Dashboards with R Markdown&quot; by <a href="https://twitter.com/nwstephens?ref_src=twsrc%5Etfw">@nwstephens</a><br> <a href="https://t.co/YwE2q5K8dE">https://t.co/YwE2q5K8dE</a> <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://twitter.com/hashtag/rmarkdown?src=hash&amp;ref_src=twsrc%5Etfw">#rmarkdown</a> <a href="https://twitter.com/hashtag/dataviz?src=hash&amp;ref_src=twsrc%5Etfw">#dataviz</a> <a href="https://t.co/PvLn7vA22V">pic.twitter.com/PvLn7vA22V</a></p>&mdash; Mara Averick (@dataandme) <a href="https://twitter.com/dataandme/status/1008782917059928066?ref_src=twsrc%5Etfw">June 18, 2018</a></blockquote>
 </amp-twitter>
 
-## Micellaneous
+## Miscellaneous
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="1008693514471911424">
