--- a/_posts/2018-06-15-day-27.md
+++ b/_posts/2018-06-15-day-27.md
@@ -139,7 +139,7 @@ description: Create a ChatBot for Free
     <blockquote placeholder><p lang="en" dir="ltr">My <a href="https://twitter.com/hashtag/xaringan?src=hash&amp;ref_src=twsrc%5Etfw">#xaringan</a> slides on how use <a href="https://twitter.com/hashtag/xaringan?src=hash&amp;ref_src=twsrc%5Etfw">#xaringan</a> to make slides with <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a>: <a href="https://t.co/4lZudRoGBn">https://t.co/4lZudRoGBn</a> Raw Rmd here: <a href="https://t.co/QeFEdYlaGv">https://t.co/QeFEdYlaGv</a> <a href="https://t.co/7QOUqawFQf">pic.twitter.com/7QOUqawFQf</a></p>&mdash; Dr. Alison Hill (@apreshill) <a href="https://twitter.com/apreshill/status/1007039298682552320?ref_src=twsrc%5Etfw">June 13, 2018</a></blockquote>
 </amp-twitter>
 
-## Micellaneous
+## Miscellaneous
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="1007822339793289216">
