Update annotate notebook

--- a/notebooks/annotate.ipynb
+++ b/notebooks/annotate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-07-23T23:10:32+08:00\n",
+      "2018-07-27T16:44:25+08:00\n",
       "\n",
       "CPython 3.6.5\n",
       "IPython 6.1.0\n",
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -734,11 +734,9 @@
        "      <th>no_conversation</th>\n",
        "      <th>sub-headline</th>\n",
        "      <th>tags</th>\n",
-       "      <th>parent_tid</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tid</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -754,7 +752,6 @@
        "      <td>False</td>\n",
        "      <td>R for Psychological Science?</td>\n",
        "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1017579549435912194</th>\n",
@@ -763,7 +760,6 @@
        "      <td>False</td>\n",
        "      <td>Keynote</td>\n",
        "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1018377414852767744</th>\n",
@@ -772,7 +768,6 @@
        "      <td>False</td>\n",
        "      <td>Keynote</td>\n",
        "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1017842613641269250</th>\n",
@@ -781,7 +776,6 @@
        "      <td>False</td>\n",
        "      <td>Keynote</td>\n",
        "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1017518220645986305</th>\n",
@@ -790,7 +784,6 @@
        "      <td>False</td>\n",
        "      <td>fasster</td>\n",
        "      <td>[]</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -805,16 +798,16 @@
        "1017842613641269250  2018-07-12  #UseR2018            False   \n",
        "1017518220645986305  2018-07-12  #UseR2018            False   \n",
        "\n",
-       "                                     sub-headline tags parent_tid  \n",
-       "tid                                                                \n",
-       "1017750890583711744  R for Psychological Science?   []        NaN  \n",
-       "1017579549435912194                       Keynote   []        NaN  \n",
-       "1018377414852767744                       Keynote   []        NaN  \n",
-       "1017842613641269250                       Keynote   []        NaN  \n",
-       "1017518220645986305                       fasster   []        NaN  "
+       "                                     sub-headline tags  \n",
+       "tid                                                     \n",
+       "1017750890583711744  R for Psychological Science?   []  \n",
+       "1017579549435912194                       Keynote   []  \n",
+       "1018377414852767744                       Keynote   []  \n",
+       "1017842613641269250                       Keynote   []  \n",
+       "1017518220645986305                       fasster   []  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +850,7 @@
        "      dtype='object', name='sub-headline')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
